corrected image file path for visibilitz on mz szstem

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 
         <img id="domain" src="image/slider6.webp" alt="Domain Registration">
         <img id="ml" src="image/slider7.webp" alt="Machine Learning">
-        <img id="network" src="image/slider1.webp" alt="Networking"></a>
-        <img id="data" src="image/slider2.webp" alt="Data Analysis"></a>
-        <img id="security" src="image/slider3.webp" alt="Web Development Training"></a>
-        <img id="web" src="image/slider4.webp" alt="Web Development"></a>
-        <img id="gamedev" src="image/slider5.webp" alt="Game Development"></a>
+        <img id="network" src="image/slider1.webp" alt="Networking">
+        <img id="data" src="image/slider2.webp" alt="Data Analysis">
+        <img id="security" src="image/slider3.webp" alt="Web Development Training">
+        <img id="web" src="image/slider4.webp" alt="Web Development">
+        <img id="gamedev" src="image/slider5.webp" alt="Game Development">
 
       </div>
 
@@ -144,7 +144,12 @@
       </div>
 
       <div class="blogot"> <div>All rights reserved. 2025</div>
-        <img class="logot" src="/image/minlogo.png" alt="minilogo">
+    
+        <img  id="gamed" class="" src="image/minlogo.png" alt="minilogo"/>
+        
+        <!-- <img id="gamed1"  class="logot"  src="image/minlogo.png" alt="minilogo"> -->
+
+
         <button id="dkmodebutton">Switch to darkmode</button>
       </div>
 
